[package]
name = "newsletter"
version = "0.1.0"
authors = ["Caio Gomes <caiocodes@proton.me>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
axum = "0.6.20"
hyper = "0.14.27"
reqwest = "0.11.22"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
